# TradeNote

./: .gitignore  CMakeLists.txt  README.md  tradenote.desktop
scripts/: create_deb.sh  create_win_installer.sh
src/: main.cpp  version.h.in
src/models/: data_manager.cpp  data_manager.h  deal.cpp  deal.h  journal_entry.cpp  journal_entry.h  strategy.cpp  strategy.h  todo_item.h
src/resources/: icons.cpp  icons.h  themes.cpp  themes.h
src/windows/: deals_window.cpp  deals_window.h  journal_tab.cpp  journal_tab.h  main_window.cpp  main_window.h  settings_dlg.cpp  settings_dlg.h  statistics_tab.cpp  statistics_tab.h  strategy_dlg.cpp  strategy_dlg.h  terminal_window.cpp  terminal_window.h  todo_tab.cpp  todo_tab.h  trade_dialog.cpp  trade_dialog.h
